cache penetration & bloom filter

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ names = { version = "0.14.0", default-features = false }
 dotenv = "0.15.0"
 tower-http = { version = "0.5", features = ["trace"] }
 simple-error = "0.3.0"
+bloomfilter = "1.0.13"
